[package]
name = "pallet-parentchain"
description = "The remote attestation registry and verification pallet for litentry blockchains and parachains"
version = "0.9.0"
authors = ['Trust Computing GmbH <info@litentry.com>', 'Integritee AG <hello@integritee.network>']
homepage = 'https://litentry.com/'
repository = 'https://github.com/litentry/litentry-parachain'
license = "Apache-2.0"
edition = "2021"

[dependencies]
parity-scale-codec = { workspace = true }
scale-info = { workspace = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }

[dev-dependencies]
env_logger = { workspace = true }
sp-keyring = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "parity-scale-codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]

try-runtime = ["frame-support/try-runtime"]
