[package]
authors = ["Integritee AG <hello@integritee.network>"]
description = "Pallet for integritee sidechains"
edition = "2021"
homepage = "https://integritee.network/"
license = "Apache-2.0"
name = "pallet-sidechain"
repository = "https://github.com/integritee-network/pallets/"
version = "0.9.0"

[dependencies]
codec = { version = "3.0.0", default-features = false, features = ["derive"], package = "parity-scale-codec" }
log = { version = "0.4.14", default-features = false }
scale-info = { version = "2.0.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.13", features = ["derive"], optional = true }

# local
pallet-teerex = { path = "../teerex", default-features = false }
sidechain-primitives = { path = "../../primitives/sidechain", default-features = false }
teerex-primitives = { path = "../../primitives/teerex", default-features = false }

# substrate dependencies
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }

# benchmarking
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
hex-literal = { version = "0.3.2", optional = true }
pallet-balances = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
test-utils = { path = "../test-utils", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.10.0"
externalities = { package = "sp-externalities", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
hex-literal = "0.3.2"
pallet-balances = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.37" }
test-utils = { path = "../test-utils" }

[features]
default = ["std"]
runtime-benchmarks = [
  "frame-benchmarking",
  "hex-literal",
  "pallet-balances",
  "pallet-timestamp/runtime-benchmarks",
  "test-utils",
]
std = [
  "codec/std",
  "log/std",
  "scale-info/std",
  "serde",
  # local
  "pallet-teerex/std",
  "sidechain-primitives/std",
  "teerex-primitives/std",
  # substrate
  "frame-support/std",
  "frame-system/std",
  "pallet-timestamp/std",
  "sp-core/std",
  "sp-io/std",
  "sp-runtime/std",
  "sp-std/std",
]
# Allow workers to register without remote attestation for dev purposes.
# This pallet needs the flag only to run the tests, otherwise skip-ias-check should only be set in the pallet-teerex.
skip-ias-check = []

try-runtime = ["frame-support/try-runtime"]
